--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "web_engine"
-version = "0.0.0"
-description = "web_engine"
+version = "0.1.0"
+description = "Websites to PDFs."
 readme = "README.rst"
 authors = [
     { name = "Johannes", email = "johannes-programming@posteo.org" },
@@ -18,7 +18,15 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 keywords = []
-dependencies = []
+dependencies = [
+    "PyPDF2",
+    "pdfkit",
+    "pypdf",
+    "wkhtmltopdf",
+    "docx2pdf",
+    "htmldocx",
+    "weasyprint",
+]
 requires-python = ">=3.11"
 
 [project.license]
@@ -27,4 +35,9 @@ file = "LICENSE.txt"
 [project.urls]
 Download = "https://pypi.org/project/web-engine/#files"
 Source = "https://github.com/johannes-programming/web_engine"
+
+
+
+
+
 
